	up ("..").  Thanks to filterfalse.

	Fixed :mkdir! on absolute paths, used to create relative paths anyway.
	Thanks to filterfalse.

	Fixed `:cd one two` to use current directory as base for both relative
	paths.  Thanks to filterfalse.

	Fixed ranges for :yank.  Thanks to Marius.

	Fixed enabling sorting on loading regular custom view after very custom
	view.

0.8-beta to 0.8

	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.

	Added device id (major and minor numbers) to file info dialog.

	Added script to update timestamps, so that build system won't be
	regenerated without real reason.  One might want to run it when building
	from git checkout, which doesn't preserve correct timestamps.

	Append unused space in view columns to the last one with percent sizing
	type if any.  Thanks to fogine.

	Drastically increased performance of custom view composing.

	Be more accurate when deciding whether view displays graphics,
	particularly rely on %px and %py, because %pw and %ph might be useful for
	text viewers as well.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Less flicker on preview window update.

	Clean occasional graphics leftovers after disabling preview.

	Ignore file decorations ('classify') on sorting custom views.  Thanks to
	filterfalse.

	Do not invoke vifmrc-converter to update color scheme names if no color
	schemes were found.

	Display 2822 date without time zone in file info.  Thanks to Svyatoslav
	Mishyn (a.k.a. juef).

	Disallow creating user-defined command with "?" or "!" suffix if this
	would hide builtin command.  Redefining commands without suffixes is not
	allowed, thus this shouldn't be allowed too.

	Better "all" pseudo-option parsing and support of resetting it.

	Do not display same path twice in detailed progress information (after
	both "file" and "from").

	Shorten paths in "file" and "from" in progress dialog.

	Sync approximate and accurate forms of progress dialogs.

	Fixed pane titles update on switching panes.
