@@ -454,6 +454,10 @@ int ui_view_sort_list_contains(const char sort[SK_COUNT], char key);
  * "iname" for views, except for unsorted custom view). */
 void ui_view_sort_list_ensure_well_formed(FileView *view, char sort_keys[]);
 
+/* Picks sort array for the view taking custom view into account.  Returns
+ * pointer to the array. */
+char * ui_view_sort_list_get(const FileView *view);
+
 /* Checks whether file numbers should be displayed for the view.  Returns
  * non-zero if so, otherwise zero is returned. */
 int ui_view_displays_numbers(const FileView *const view);
