@@ -272,6 +272,8 @@
 	Fixed enabling sorting on loading regular custom view after very custom
 	view.
 
+	Fixed turning of very custom view into sorted one after :restart.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
